--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Seminary Study API",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -21,10 +22,11 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "graphql": "^15.8.0",
+    "graphql": "^16.8.1",
     "graphql-http": "^1.22.0",
     "mongodb": "^6.2.0"
   },
