--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Seminary Study API",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -23,6 +22,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -31,6 +31,6 @@
     "mongodb": "^6.2.0"
   },
   "engines": {
-    "node": "18.17.1"
+    "node": "21.2.0"
   }
 }
