--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.17.1",
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.0",
     "mongodb": "^6.2.0"
