--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Seminary Study API",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "start": "nodemon server.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
@@ -24,6 +24,7 @@
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0"
   },
@@ -36,7 +37,8 @@
     "express-openid-connect": "^2.17.1",
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.0",
-    "mongodb": "^6.2.0"
+    "mongodb": "^6.2.0",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": "21.2.0"
