--- a/package.json
+++ b/package.json
@@ -22,31 +22,31 @@
   "homepage": "https://github.com/CarGuzRuth7/Seminary-Study-API#readme",
   "devDependencies": {
     "chai": "^4.3.10",
-    "easygraphql-tester": "^6.0.1",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "sinon": "^17.0.1"
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
-    "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "easygraphql-tester": "^6.0.1",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.1",
-    "graphql": "^16.8.1",
+    "graphql": "^15.8.0",
+    "graphql-http": "^1.22.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "mongodb": "^6.2.0",
+    "supertest": "^6.3.3",
     "tough-cookie": "^4.1.3"
-    "graphql-http": "^1.22.0",
-    "supertest": "^6.3.3"
   },
   "engines": {
     "node": "21.2.0"
