--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "mongodb": "^6.2.0",
-    "tough-cookie": "^4.1.3"
+    "tough-cookie": "^4.1.3",
     "graphql-http": "^1.22.0",
     "supertest": "^6.3.3"
   },
