--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
   "dependencies": {
     "@apollo/server": "^4.9.5",
     "apollo-server-express": "^3.13.0",
+    "auth0": "^4.2.0",
     "axios": "^1.6.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "easygraphql-tester": "^6.0.1",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.1",
-    "graphql": "^15.8.0",
     "graphql-http": "^1.22.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "mongodb": "^6.2.0",
+    "request": "^2.88.2",
     "supertest": "^6.3.3",
     "tough-cookie": "^4.1.3"
   },
